--- a/css/styles.css
+++ b/css/styles.css
@@ -224,147 +224,6 @@ a:hover {
     text-decoration: none;
 }
 
-.form-group {
-    position: relative;
-    margin-bottom: 1.25rem;
-}
-
-.form-group.has-error.has-danger {
-    margin-bottom: 0.625rem;
-}
-
-.form-group.has-error.has-danger .help-block.with-errors ul {
-    margin-top: 0.375rem;
-}
-
-.label-control {
-    position: absolute;
-    top: 0.875rem;
-    left: 1.375rem;
-    color: #7d838a;
-    opacity: 1;
-    cursor: text;
-    transition: all 0.2s ease;
-}
-
-select {
-    top: 0.875rem;
-    left: 1.375rem;
-    color: #7d838a;
-    opacity: 1;
-    cursor: text;
-    transition: all 0.2s ease;
-}
-
-.form-control-input:focus+.label-control,
-.form-control-input.notEmpty+.label-control,
-.form-control-textarea:focus+.label-control,
-.form-control-textarea.notEmpty+.label-control {
-    top: 0.125rem;
-    color: #5d636b;
-    opacity: 1;
-    font: 400 "Open Sans", sans-serif;
-    font-size: 0.75rem;
-    font-weight: 700;
-}
-
-.form-control-input,
-.form-control-select {
-    display: block;
-    /* needed for proper display of the label in Firefox, IE, Edge */
-    width: 100%;
-    padding-top: 1.125rem;
-    padding-bottom: 0.125rem;
-    padding-left: 1.3125rem;
-    border: 1px solid #cbcbd1;
-    border-radius: 4px;
-    background-color: #ffffff;
-    color: #5d636b;
-    font: 400 0.875rem/1.875rem "Open Sans", sans-serif;
-    transition: all 0.2s;
-    -webkit-appearance: none;
-    /* removes inner shadow on form inputs on ios safari */
-}
-
-.form-control-select {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    height: 3.25rem;
-    color: #7d838a;
-}
-
-select {
-    /* you should keep these first rules in place to maintain cross-browser behavior */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
-    background-image: url('../images/down-arrow.png');
-    background-position: 96% 50%;
-    background-repeat: no-repeat;
-    outline: none;
-}
-
-.form-control-textarea {
-    display: block;
-    /* used to eliminate a bottom gap difference between Chrome and IE/FF */
-    width: 100%;
-    height: 14rem;
-    /* used instead of html rows to normalize height between Chrome and IE/FF */
-    padding-top: 1.25rem;
-    padding-left: 1.3125rem;
-    border: 1px solid #cbcbd1;
-    border-radius: 4px;
-    background-color: #ffffff;
-    color: #5d636b;
-    font: 400 0.875rem/1.75rem "Open Sans", sans-serif;
-    transition: all 0.2s;
-}
-
-.form-control-input:focus,
-.form-control-select:focus,
-.form-control-textarea:focus {
-    border: 1px solid #a1a1a1;
-    outline: none;
-    /* Removes blue border on focus */
-}
-
-.form-control-input:hover,
-.form-control-select:hover,
-.form-control-textarea:hover {
-    border: 1px solid #a1a1a1;
-}
-
-.checkbox {
-    font-size: 0.75rem;
-    line-height: 1.25rem;
-}
-
-input[type='checkbox'] {
-    vertical-align: -10%;
-    margin-right: 0.5rem;
-}
-
-.form-control-submit-button {
-    display: inline-block;
-    width: 100%;
-    height: 3.25rem;
-    border: 1px solid #F70B39;
-    border-radius: 32px;
-    background-color: #F70B39;
-    color: #ffffff;
-    font: 600 0.875rem/0 "Open Sans", sans-serif;
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-.form-control-submit-button:hover {
-    border: 1px solid #F70B39;
-    background-color: transparent;
-    color: #F70B39;
-}
-
 
 /* Fade-move Animation For Details Lightbox - Magnific Popup */
 
@@ -695,6 +554,10 @@ input[type='checkbox'] {
     border-radius: 8px;
 }
 
+.card-parking {
+    height: 270px;
+}
+
 .cards-1 .card-image {
     width: 100px;
     height: 100px;
@@ -767,6 +630,121 @@ input[type='checkbox'] {
 }
 
 
+/* Lightbox */
+
+.lightbox-basic {
+    position: relative;
+    max-width: 1150px;
+    margin: 2.5rem auto;
+    padding: 3rem 1rem;
+    background-color: #ffffff;
+    text-align: left;
+}
+
+.lightbox-basic .image-container {
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.lightbox-basic .image-container img {
+    border-radius: 8px;
+}
+
+.lightbox-basic h3 {
+    margin-bottom: 0.5rem;
+}
+
+.lightbox-basic hr {
+    width: 44px;
+    margin-top: 0.125rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
+    border-top: 0.125rem solid #F70B39;
+}
+
+.lightbox-basic h4 {
+    margin-top: 1.75rem;
+    margin-bottom: 0.625rem;
+}
+
+.lightbox-basic .list-unstyled {
+    margin-bottom: 1.5rem;
+}
+
+.lightbox-basic .list-unstyled .fas {
+    color: #F70B39;
+    font-size: 0.875rem;
+    line-height: 1.75rem;
+}
+
+.lightbox-basic .list-unstyled .media-body {
+    margin-left: 0.625rem;
+}
+
+.lightbox-basic .list-unstyled {
+    margin-bottom: 1.5rem;
+}
+
+
+/* Action Button */
+
+.lightbox-basic .btn-solid-reg.mfp-close {
+    position: relative;
+    width: auto;
+    height: auto;
+    color: #ffffff;
+    opacity: 1;
+    font-family: "Open Sans";
+}
+
+.lightbox-basic .btn-solid-reg.mfp-close:hover {
+    color: #F70B39;
+}
+
+
+/* end of action Button */
+
+
+/* Back Button */
+
+.lightbox-basic .btn-outline-reg.mfp-close.as-button {
+    position: relative;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    margin-left: 0.375rem;
+    padding: 1.375rem 2.25rem 1.375rem 2.25rem;
+    border: 1px solid #32373e;
+    background-color: transparent;
+    color: #32373e;
+    opacity: 1;
+    font-family: "Open Sans";
+}
+
+.lightbox-basic .btn-outline-reg.mfp-close.as-button:hover {
+    background-color: #32373e;
+    color: #ffffff;
+}
+
+
+/* end of back button */
+
+
+/* Close X Button */
+
+.lightbox-basic button.mfp-close.x-button {
+    position: absolute;
+    top: -2px;
+    right: -2px;
+    width: 44px;
+    height: 44px;
+    color: #555555;
+}
+
+
+/* end of close x button */
+
+
 /* Action Button */
 
 .solutions-sections .btn-solid-reg.mfp-close {
@@ -779,39 +757,6 @@ input[type='checkbox'] {
 
 .solutions-sections .btn-solid-reg.mfp-close:hover {
     color: #F70B39;
-}
-
-
-/* Back Button */
-
-.solutions-sections .btn-outline-reg.mfp-close.as-button {
-    position: relative;
-    display: inline-block;
-    width: auto;
-    height: auto;
-    margin-left: 0.375rem;
-    padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-    border: 1px solid #1d1d1d;
-    background-color: transparent;
-    color: #1d1d1d;
-    opacity: 1;
-}
-
-.solutions-sections .btn-outline-reg.mfp-close.as-button:hover {
-    background-color: #1d1d1d;
-    color: #ffffff;
-}
-
-
-/* Close X Button */
-
-.solutions-sections button.mfp-close.x-button {
-    position: absolute;
-    top: -0.125rem;
-    right: -0.125rem;
-    width: 44px;
-    height: 44px;
-    color: #555555;
 }
 
 
