--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -1,3 +1,15 @@
+body {
+    width: 100%;
+    height: 100%;
+    color: #5d636b;
+    font: 400 1rem/1.625rem "Open Sans", sans-serif;
+}
+
+form {
+    margin-right: 6rem;
+    margin-left: 1.625rem;
+}
+
 .form-group {
     position: relative;
     margin-bottom: 1.25rem;
