--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -48,7 +48,7 @@ option {
 
 .form-control-input,
 .form-control-select {
-    display: block;
+    display: inline-block;
     /* needed for proper display of the label in Firefox, IE, Edge */
     width: 100%;
     padding-top: 1.125rem;
@@ -85,7 +85,9 @@ select {
 }
 
 .form-control-textarea {
-    display: block;
+    display: inline-block;
+    /* used to eliminate a bottom gap difference between Chrome and IE/FF */
+    width: 100%;
     height: 14rem;
     /* used instead of html rows to normalize height between Chrome and IE/FF */
     padding-top: 1.25rem;
