--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -16,7 +16,7 @@ form {
     margin-bottom: 1.25rem;
 }
 
-.label-control {
+/*.label-control {
     position: absolute;
     top: 0.875rem;
     left: 1.375rem;
@@ -24,7 +24,7 @@ form {
     opacity: 1;
     cursor: text;
     transition: all 0.2s ease;
-}
+}*/
 
 .form-control-input:focus+.label-control,
 .form-control-input.notEmpty+.label-control,
