--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -1,9 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     width: 100%;
     height: 100%;
     color: #5d636b;
     font: 400 1rem/1.625rem "Open Sans", sans-serif;
-    margin: 0;
 }
 
 form {
@@ -19,6 +23,7 @@ form {
 .label-control {
     position: absolute;
     top: 0.875rem;
+    left: 1.375rem;
     color: #7d838a;
     opacity: 1;
     cursor: text;
