--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -18,8 +18,8 @@ form {
 
 .label-control {
     position: absolute;
-    padding-top: 0.875rem;
-    padding-left: 1.375rem;
+    top: 0.875rem;
+    left: 1.375rem;
     color: #7d838a;
     opacity: 1;
     cursor: text;
