--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -45,7 +45,7 @@ form {
     box-sizing: border-box;
     width: 100%;
     height: 14rem;
-    padding-left: 1.3125rem;
+    left: 1.3125rem;
     border: 1px solid #cbcbd1;
     border-radius: 4px;
     background-color: #ffffff;
@@ -75,7 +75,7 @@ select {
     box-sizing: border-box;
     width: 100%;
     height: 14rem;
-    padding-left: 1.3125rem;
+    left: 1.3125rem;
     border: 1px solid #cbcbd1;
     border-radius: 4px;
     background-color: #ffffff;
