--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -38,7 +38,8 @@ form {
     font-weight: 700;
 }
 
-.form-control-input {
+.form-control-input,
+.form-control-textarea {
     display: block;
     /* needed for proper display of the label in Firefox, IE, Edge */
     box-sizing: border-box;
@@ -56,21 +57,12 @@ form {
     /* removes inner shadow on form inputs on ios safari */
 }
 
+.form-control-input {
+    height: 3.25rem;
+}
+
 .form-control-textarea {
-    display: block;
-    /* used to eliminate a bottom gap difference between Chrome and IE/FF */
-    box-sizing: border-box;
-    width: 100%;
     height: 14rem;
-    padding-top: 1.125rem;
-    padding-bottom: 0.125rem;
-    padding-left: 1.3125rem;
-    border: 1px solid #cbcbd1;
-    border-radius: 4px;
-    background-color: #ffffff;
-    color: #5d636b;
-    font: 400 0.875rem/1.75rem "Open Sans", sans-serif;
-    transition: all 0.2s;
 }
 
 select {
