--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -16,7 +16,8 @@ form {
     margin-bottom: 1.25rem;
 }
 
-.label-control {
+.label-control,
+option {
     position: absolute;
     top: 0.875rem;
     left: 1.375rem;
@@ -29,6 +30,7 @@ form {
 }
 
 .form-control-input:focus+.label-control,
+option,
 .form-control-input.notEmpty+.label-control,
 .form-control-textarea:focus+.label-control,
 .form-control-textarea.notEmpty+.label-control {
