--- a/css/styles.css
+++ b/css/styles.css
@@ -1439,39 +1439,7 @@ a:hover.back-to-top {
         margin-bottom: 0;
         text-align: left;
     }
-    /* Details 2 */
-    .basic-2 .image-container {
-        margin-bottom: 0;
-    }
-    .basic-2 .text-container {
-        margin-top: 2rem;
-    }
-    .basic-2 h2 {
-        width: 24.375rem;
-    }
-    /* Pricing */
-    .cards-2 .card {
-        display: inline-block;
-        max-width: 100%;
-        width: 302px;
-        vertical-align: top;
-    }
-    .cards-2 .card:nth-of-type(3n+2) {
-        margin-right: 0.375rem;
-        margin-left: 0.375rem;
-    }
-    /* Registration */
-    .form-1 .text-container {
-        margin-top: 2.625rem;
-        margin-bottom: 0;
-    }
-    /* Video */
-    .basic-3 .image-container {
-        width: 930px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    /* Testimonials */
+    /* Testimonials
     .slider-2 .image-container {
         margin-bottom: 0;
     }
@@ -1487,7 +1455,7 @@ a:hover.back-to-top {
         right: 16px;
         width: 22px;
         background-size: 22px 34px;
-    }
+    } */
     /* About */
     .cards-3 .card {
         display: inline-block;
@@ -1586,29 +1554,7 @@ a:hover.back-to-top {
     .solutions-sections .image-container {
         margin-right: 1.5rem;
     }
-    /* Details 2 */
-    .basic-2 .text-container {
-        margin-top: 4.25rem;
-        margin-left: 5.5rem;
-    }
-    /* Pricing */
-    .cards-2 .card {
-        width: 330px;
-    }
-    .cards-2 .card:nth-of-type(3n+2) {
-        margin-right: 3.375rem;
-        margin-left: 3.375rem;
-    }
-    /* Registration */
-    .form-1 .text-container {
-        margin-right: 2.125rem;
-        margin-left: 6rem;
-    }
-    .form-1 form {
-        margin-right: 6rem;
-        margin-left: 1.625rem;
-    }
-    /* Testimonials */
+    /* Testimonials
     .slider-2 h2 {
         margin-top: 3.5rem;
         margin-left: 3.25rem;
@@ -1617,7 +1563,7 @@ a:hover.back-to-top {
         width: 90%;
         margin-right: 0;
         margin-left: auto;
-    }
+    } */
     /* About */
     .cards-3 .card:nth-of-type(4n+2) {
         margin-right: 2.25rem;
@@ -1630,7 +1576,6 @@ a:hover.back-to-top {
     /* Contact */
     .form-iframe {
         position: relative;
-        padding-bottom: 56.25%;
         padding-top: 35px;
         height: 0;
         overflow: hidden;
@@ -1639,7 +1584,6 @@ a:hover.back-to-top {
         position: absolute;
         top: 0;
         left: 0;
-        width: 95%;
         height: 100%;
     }
     .form-2 {
@@ -1652,7 +1596,7 @@ a:hover.back-to-top {
     .form-2 form {
         margin-left: 1.25rem;
     }
-    .form-2 .form-control-textarea {
+    .form-control-textarea {
         height: 11rem;
     }
     .form-2 .decoration {
