--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ body,
 html {
     width: 100%;
     height: 100%;
-    margin: 0;
 }
 
 body,
@@ -1635,14 +1634,16 @@ a:hover.back-to-top {
     /* Contact */
     .form-iframe {
         position: relative;
-        height: 100%;
+        padding-bottom: 56.25%;
+        padding-top: 35px;
+        height: 0;
         overflow: hidden;
     }
     .form-iframe iframe {
         position: absolute;
         top: 0;
         left: 0;
-        width: 95%;
+        width: 100%;
         height: 100%;
     }
     .form-2 {
