--- a/css/styles.css
+++ b/css/styles.css
@@ -1632,12 +1632,9 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
-    .form-iframe {
-        position: relative;
-        padding-bottom: 56.25%;
-        padding-top: 35px;
-        height: 0;
-        overflow: hidden;
+    iframe {
+        display: block;
+        width: 100%;
     }
     .form-iframe iframe {
         position: absolute;
@@ -1645,9 +1642,6 @@ a:hover.back-to-top {
         left: 0;
         width: 100%;
         height: 100%;
-    }
-    .form-2 {
-        overflow: hidden;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
