--- a/css/styles.css
+++ b/css/styles.css
@@ -1112,10 +1112,6 @@ a:hover {
     margin-bottom: 3.75rem;
 }
 
-.form-2 .list-unstyled .fas {
-    color: #F70B39;
-}
-
 .form-2 .map-responsive {
     position: relative;
     overflow: hidden;
@@ -1641,7 +1637,7 @@ a:hover.back-to-top {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 0;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
