--- a/css/styles.css
+++ b/css/styles.css
@@ -1638,6 +1638,7 @@ a:hover.back-to-top {
         left: 0;
         width: 100%;
         height: 0;
+        overflow: hidden;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
