--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -44,6 +44,7 @@ form {
     display: block;
     /* needed for proper display of the label in Firefox, IE, Edge */
     width: 100%;
+    box-sizing: border-box;
     padding-top: 1.125rem;
     padding-bottom: 0.125rem;
     padding-left: 1.3125rem;
