--- a/css/styles.css
+++ b/css/styles.css
@@ -1642,7 +1642,7 @@ a:hover.back-to-top {
         left: 0;
         width: 100%;
         height: 0;
-        overflow: visible;
+        overflow: hidden;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
