--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,6 +1628,18 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
+    iframe {
+        display: block;
+        width: 100%;
+    }
+    .form-iframe iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+    }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
         padding-bottom: 80%;
