--- a/css/styles.css
+++ b/css/styles.css
@@ -1629,15 +1629,15 @@ a:hover.back-to-top {
     }
     /* Contact */
     iframe {
-        display: block;
-        width: 100%;
-    }
-    .form-iframe iframe {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 0;
+        height: 100%;
+        border: 0;
+    }
+    .form-iframe iframe {
+        position: relative;
         overflow: hidden;
     }
     .form-2 .map-responsive {
