--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -14,6 +14,7 @@ form {
 .form-group {
     position: relative;
     margin-bottom: 1.25rem;
+    box-sizing: border-box;
 }
 
 .label-control {
@@ -43,6 +44,7 @@ form {
     display: block;
     /* needed for proper display of the label in Firefox, IE, Edge */
     width: 100%;
+    box-sizing: border-box;
     padding-top: 1.125rem;
     padding-bottom: 0.125rem;
     padding-left: 1.3125rem;
@@ -78,6 +80,7 @@ select {
     display: block;
     /* used to eliminate a bottom gap difference between Chrome and IE/FF */
     width: 100%;
+    box-sizing: border-box;
     height: 14rem;
     /* used instead of html rows to normalize height between Chrome and IE/FF */
     padding-top: 1.5rem;
