--- a/css/styles.css
+++ b/css/styles.css
@@ -1635,6 +1635,7 @@ a:hover.back-to-top {
         width: 100%;
         height: 0;
         border: 0;
+        overflow: hidden;
     }
     .form-iframe iframe {
         position: relative;
