--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,7 +1628,7 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
-    iframe {
+    .form-iframe {
         position: absolute;
         top: 0;
         left: 0;
@@ -1641,6 +1641,8 @@ a:hover.back-to-top {
         position: relative;
         overflow: hidden;
         border: 0;
+        width: 100%;
+        height: 100%;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
