--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,21 +1628,17 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
-    .form-iframe {
+    iframe {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 0;
         border: 0;
-        overflow: hidden;
     }
     .form-iframe iframe {
         position: relative;
         overflow: hidden;
-        border: 0;
-        width: 100%;
-        height: 100%;
     }
     .form-2 .map-responsive {
         margin-right: 1.25rem;
