--- a/css/styles.css
+++ b/css/styles.css
@@ -1629,12 +1629,16 @@ a:hover.back-to-top {
     }
     /* Contact */
     iframe {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+    }
+    .form-iframe iframe {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 0;
-        border: 0;
         overflow: hidden;
     }
     .form-2 .map-responsive {
