--- a/css/styles.css
+++ b/css/styles.css
@@ -1631,7 +1631,6 @@ a:hover.back-to-top {
     iframe {
         display: block;
         width: 100%;
-        overflow: hidden;
     }
     .form-iframe iframe {
         position: absolute;
@@ -1666,5 +1665,16 @@ a:hover.back-to-top {
     .ex-cards-1 .card:nth-of-type(3n+2) {
         margin-right: 2.875rem;
         margin-left: 2.875rem;
+    }
+}
+
+
+/* Min-width 1600px */
+
+@media (min-width: 1600px) {
+    /* Contact */
+    .form-2 .decoration {
+        right: -410px;
+        width: 630px;
     }
 }
