--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,16 +1628,13 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
-    iframe {
-        display: block;
-        width: 100%;
-    }
     .form-iframe iframe {
         position: absolute;
+        display: block;
         top: 0;
         left: 0;
         width: 100%;
-        height: 0;
+        height: 100%;
         overflow: hidden;
     }
     .form-2 .map-responsive {
