--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,7 +1628,7 @@ a:hover.back-to-top {
         margin-left: 2.25rem;
     }
     /* Contact */
-    .form-iframe {
+    .form-iframe iframe {
         position: absolute;
         display: block;
         top: 0;
