--- a/css/styles.css
+++ b/css/styles.css
@@ -1319,6 +1319,9 @@ a:hover.back-to-top {
     .header .image-container {
         display: none;
     }
+    .form-iframe {
+        margin: auto;
+    }
 }
 
 
