--- a/css/styles.css
+++ b/css/styles.css
@@ -1320,7 +1320,7 @@ a:hover.back-to-top {
         display: none;
     }
     .form-iframe {
-        margin: auto;
+        margin-left: 15%;
     }
 }
 
