--- a/css/styles.css
+++ b/css/styles.css
@@ -1319,7 +1319,7 @@ a:hover.back-to-top {
         display: none;
     }
     .form-iframe {
-        margin-left: 33%;
+        margin: auto;
     }
 }
 
