Modification Contact Form margins/width

--- a/css/styles.css
+++ b/css/styles.css
@@ -1318,6 +1318,13 @@ a:hover.back-to-top {
     }
 }
 
+@media (max-width: 450px) {
+    .form-iframe {
+        margin: auto;
+        width: 350px;
+    }
+}
+
 
 /* Min-width 992px */
 
