Margins Cont-Form

--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -7,8 +7,8 @@ body {
 }
 
 form {
-    margin-right: 6rem;
-    margin-left: 1.625rem;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .form-group {
