--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -9,6 +9,9 @@ body {
 form {
     margin-right: 10px;
     margin-left: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    box-sizing: border-box;
 }
 
 .form-group {
