--- a/css/styles.css
+++ b/css/styles.css
@@ -1084,11 +1084,7 @@ a:hover {
 .form-2 {
     position: relative;
     padding-top: 7rem;
-}
-
-.form-2 .form-iframe {
-    margin: 0 20px;
-    padding: 0 10px;
+    padding-bottom: 6.25rem;
 }
 
 .form-2 .h2-heading,
@@ -1131,8 +1127,8 @@ a:hover {
     border: none;
 }
 
-.form-2 .form-control-textarea {
-    height: 8rem;
+.form-2 .form-iframe {
+    padding: 0 10px;
 }
 
 
@@ -1316,6 +1312,9 @@ a:hover.back-to-top {
 @media (max-width: 992px) {
     .header .image-container {
         display: none;
+    }
+    .form-iframe {
+        margin: auto;
     }
 }
 
