--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,14 @@ h2 {
     font: 600 2.125rem/2.75rem "Poppins", sans-serif;
 }
 
+.h2-heading:before {
+    display: block;
+    content: " ";
+    margin-top: -3rem;
+    height: 3rem;
+    visibility: hidden;
+}
+
 h3 {
     color: #353535;
     font: 600 1.75rem/2.375rem "Poppins", sans-serif;
